--- a/css/app.css
+++ b/css/app.css
@@ -440,3 +440,15 @@ body {
     transform: scale(0.7);
 
 }
+
+@media (hover: none) and (pointer: coarse) {
+    #cursor {
+        display: none !important;
+    }
+
+    body {
+        cursor: auto !important;
+    }
+}
+
+
